// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carusel/> internal callbacks ::handleNewPosition when [::limit] higher than a distance from [::position] till end of the queue, it should fill queue by injecting items from start of scope 1`] = `
Array [
  Object {
    "src": "{{src0}}",
    "tags": "{{tags0}}",
  },
  Object {
    "src": "{{src1}}",
    "tags": "{{tags1}}",
  },
  Object {
    "src": "{{src0}}",
    "tags": "{{tags0}}",
  },
]
`;

exports[`<Carusel/> internal callbacks ::handleNewPosition when [::limit] smaller than a distance from [::position] till end of the queue it should present elements in queue between [::position] and [::position + ::limit] 1`] = `
Array [
  Object {
    "src": "{{src1}}",
    "tags": "{{tags1}}",
  },
  Object {
    "src": "{{src2}}",
    "tags": "{{tags2}}",
  },
]
`;

exports[`<Carusel/> render with optional props ::limit as "1" 1`] = `
<section
  className="carusel"
>
  <div
    className="carusel_container"
  >
    <div
      className="carusel_mobile-control--left"
      data-cy="carusel-mobile-controller--left"
      onClick={[Function]}
    />
    <CaruselItem
      key="0"
      position={0}
      qaSelector="carusel-item__0"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <div
      className="carusel_mobile-control--right"
      data-cy="carusel-mobile-controller--right"
      onClick={[Function]}
    />
  </div>
  <div
    className="carusel_control--left"
    data-cy="carusel-controller--left"
    onClick={[Function]}
  >
    Prev
  </div>
  <div
    className="carusel_control--right"
    data-cy="carusel-controller--right"
    onClick={[Function]}
  >
    Next
  </div>
</section>
`;

exports[`<Carusel/> render with optional props ::position as "1" 1`] = `
<section
  className="carusel"
>
  <div
    className="carusel_container"
  >
    <div
      className="carusel_mobile-control--left"
      data-cy="carusel-mobile-controller--left"
      onClick={[Function]}
    />
    <CaruselItem
      key="0"
      position={1}
      qaSelector="carusel-item__0"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="1"
      position={0}
      qaSelector="carusel-item__1"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="2"
      position={1}
      qaSelector="carusel-item__2"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="3"
      position={0}
      qaSelector="carusel-item__3"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="4"
      position={1}
      qaSelector="carusel-item__4"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <div
      className="carusel_mobile-control--right"
      data-cy="carusel-mobile-controller--right"
      onClick={[Function]}
    />
  </div>
  <div
    className="carusel_control--left"
    data-cy="carusel-controller--left"
    onClick={[Function]}
  >
    Prev
  </div>
  <div
    className="carusel_control--right"
    data-cy="carusel-controller--right"
    onClick={[Function]}
  >
    Next
  </div>
</section>
`;

exports[`<Carusel/> render with optional props ::qaSelector as "{{qaSelector}}" 1`] = `
<section
  className="carusel"
>
  <div
    className="carusel_container"
  >
    <div
      className="carusel_mobile-control--left"
      data-cy="{{qaSelector}}carusel-mobile-controller--left"
      onClick={[Function]}
    />
    <CaruselItem
      key="0"
      position={0}
      qaSelector="{{qaSelector}}carusel-item__0"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="1"
      position={1}
      qaSelector="{{qaSelector}}carusel-item__1"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="2"
      position={0}
      qaSelector="{{qaSelector}}carusel-item__2"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="3"
      position={1}
      qaSelector="{{qaSelector}}carusel-item__3"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="4"
      position={0}
      qaSelector="{{qaSelector}}carusel-item__4"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <div
      className="carusel_mobile-control--right"
      data-cy="{{qaSelector}}carusel-mobile-controller--right"
      onClick={[Function]}
    />
  </div>
  <div
    className="carusel_control--left"
    data-cy="{{qaSelector}}carusel-controller--left"
    onClick={[Function]}
  >
    Prev
  </div>
  <div
    className="carusel_control--right"
    data-cy="{{qaSelector}}carusel-controller--right"
    onClick={[Function]}
  >
    Next
  </div>
</section>
`;

exports[`<Carusel/> render with optional props ::title as "{{title}}" 1`] = `
<section
  className="carusel"
>
  <div
    className="carusel_title"
    data-cy="carusel-title"
  >
    {{title}}
  </div>
  <div
    className="carusel_container"
  >
    <div
      className="carusel_mobile-control--left"
      data-cy="carusel-mobile-controller--left"
      onClick={[Function]}
    />
    <CaruselItem
      key="0"
      position={0}
      qaSelector="carusel-item__0"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="1"
      position={1}
      qaSelector="carusel-item__1"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="2"
      position={0}
      qaSelector="carusel-item__2"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="3"
      position={1}
      qaSelector="carusel-item__3"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="4"
      position={0}
      qaSelector="carusel-item__4"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <div
      className="carusel_mobile-control--right"
      data-cy="carusel-mobile-controller--right"
      onClick={[Function]}
    />
  </div>
  <div
    className="carusel_control--left"
    data-cy="carusel-controller--left"
    onClick={[Function]}
  >
    Prev
  </div>
  <div
    className="carusel_control--right"
    data-cy="carusel-controller--right"
    onClick={[Function]}
  >
    Next
  </div>
</section>
`;

exports[`<Carusel/> render with required/default props 1`] = `
<section
  className="carusel"
>
  <div
    className="carusel_container"
  >
    <div
      className="carusel_mobile-control--left"
      data-cy="carusel-mobile-controller--left"
      onClick={[Function]}
    />
    <CaruselItem
      key="0"
      position={0}
      qaSelector="carusel-item__0"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="1"
      position={1}
      qaSelector="carusel-item__1"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="2"
      position={0}
      qaSelector="carusel-item__2"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <CaruselItem
      key="3"
      position={1}
      qaSelector="carusel-item__3"
      src="{{src1}}"
      tags="{{tags1}}"
    />
    <CaruselItem
      key="4"
      position={0}
      qaSelector="carusel-item__4"
      src="{{src0}}"
      tags="{{tags0}}"
    />
    <div
      className="carusel_mobile-control--right"
      data-cy="carusel-mobile-controller--right"
      onClick={[Function]}
    />
  </div>
  <div
    className="carusel_control--left"
    data-cy="carusel-controller--left"
    onClick={[Function]}
  >
    Prev
  </div>
  <div
    className="carusel_control--right"
    data-cy="carusel-controller--right"
    onClick={[Function]}
  >
    Next
  </div>
</section>
`;
